--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 
       <ul>
         <li>
-          <a href="https://www.instagram.com/allanhalas13/" target="_blank">Instagram</a>
+          <a href="https://www.behance.net/allanhalas" target="_blank">Portfólio</a>
         </li>
         <li>
           <a href="https://www.linkedin.com/in/allan-halas-6293b1102/" target="_blank">Linkedin</a>
         </li>
         <li>
-          <a href="https://github.com/allanhalas13/" target="_blank">Github</a>
+          <a href="https://www.instagram.com/allanhalas13/" target="_blank">Instagram</a>
         </li>
         <li>
-          <a href="https://youtube.com/channel/UCfnUKtUBiVK4sexlNZ9q8bg" target="_blank">Youtube</a>
+          <a href="https://github.com/allanhalas13/" target="_blank">Github</a>
         </li>
       </ul>
 
